tests/baselines/reference/unusedPrivateMethodInClass4.errors.txt
unusedPrivateMethodInClass4.ts(2,13): error TS6133: 'function1' is declared but its value is never read.
unusedPrivateMethodInClass4.ts(3,13): error TS6133: 'y' is declared but its value is never read.
unusedPrivateMethodInClass4.ts(7,13): error TS6133: 'y' is declared but its value is never read.
unusedPrivateMethodInClass4.ts(11,13): error TS6133: 'y' is declared but its value is never read.


==== unusedPrivateMethodInClass4.ts (4 errors) ====
    class greeter {
        private function1() {
                ~~~~~~~~~
!!! error TS6133: 'function1' is declared but its value is never read.
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
        }
    
        private function2() {
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
        }
    
        public function3() {
            var y = 10;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
            this.function2();
        }
    }